2003-08-12  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-session.c: Synced up with HEAD.

	* component-factory.c:

	* mail-folder-cache.[c,h]:

	* mail-tools.h:

	* mail-ops.[c,h]:

	* mail-send-recv.c:

	* mail-format.[c,h]:

	* mail-display.c:

	* mail-account-gui.c:

	* mail-local.c:

	* mail-offline-handler.c:

	* subscribe-dialog.c:

2003-08-12  Jeffrey Stedfast  <fejj@ximian.com>

	* em-format-html-display.c: Fixed some compiler warnings.

	* em-format.c: Updated for new mime-parser changes made to HEAD.

	* em-folder-view.c: Fixed some compiler warnings.

	* em-format-html.c: Fixed some compiler warnings.

2003-08-06  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_format_attachment): Added bonobo
	embeddables.

2003-08-01 Harry Lu  <harry.lu@sun.com>

	*Fix for bug #6951

	* mail-display.c (launch_cb): Bypass the new added menu item.
	(save_all_parts_cb): New function. Do the real save-all work.
	(save_all_parts): New function. Get the directory to save to.
	(save_all_cb): New function. The call-back function for the new 
	added menu item.
	(pixmap_press): Add the new menu item "Save All Attachment...".
	(ptr_array_free_notify): A simple wrapper function to free the
	pointer array.
	(do_attachment_header): Save attachment pointer in an array for 
	"Save All Attachment" use.

2003-08-01  Yuedong Du  <yuedong.du@sun.com>

	* message-browser.c (on_key_press): close mail message window
	using 'ESC' key, fix bug #47087

2003-07-28  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-crypto.c: Removed smime functions as they were stale.

2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>

	* message-browser.c (message_browser_new): Handle our own Delete
	key presses. Fixes bug #45597.

2003-07-23  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (mail_format_data_wrapper_write_to_stream): Revert
	prior changes.

2003-07-23  Dan Winship  <danw@ximian.com>

	* folder-browser.c (message_list_drag_data_get): Fix type warnings